src/styles.css
body{
    display: block;
    margin: 8px;
    background-color: #202124;
    overflow-x: hidden;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

.frame{
    position: relative;
    margin: 0 auto;
    max-width: 600px;
    width: 80%;
    height: 100px;
    padding-top: 100px;
}

.frame::before{
    content: '';
    position: absolute;
    background-color: #202124;
    width: 100%;
    height: 200px;
    left: 0;
    top: 0;
    padding-top: 100px;
    z-index: 99;
    transform: translateX(-100%);
}

.frame::after{
    content: '';
    position: absolute;
    right: 0;
    top: 0;
    background-color: #202124;
    width: 100%;
    height: 200px;
    padding-top: 100px;
    z-index: 99;
    transform: translateX(100%);
}

#dino{
    position: absolute;
    bottom: 0;
    height: 40px;
    width: auto;
}

.jump{
    animation: jump 0.7s cubic-bezier(0.65, 0.05, 0.36, 1); 
}

@keyframes jump {
    0%{
        bottom: 0px;
    }
    35%{
        bottom: 60px;
    }
    100%{
        bottom: 0px;
    }
}

#cactus {
    position: absolute;
    bottom: 0;
    left: 580px;
    z-index: -1;
    animation: move 2s infinite linear;
}
 
.ctex1{
    width: 25px;
    height: 40px;
    background-image: url(./Assests/cactus1.png);
    background-size: 25px 40px;
}

.ctex2{
    width: 55px;
    height: 40px;
    background-image: url(./Assests/cactus1.png);
    background-size: 25px 40px;
}

.ctex3{
    width: 15px;
    height: 25px;
    background-image: url(./Assests/cactus1.png);
    background-size: 15px 25px;
}

@keyframes move {
    0%{
        right: 0px;
    }
    100%{
        left: -20px;
    }
}

.floor1, .floor2 {
    position: absolute;
    z-index: -2;
    bottom: 0;
    width: 100%;
    height: 120px;
    background-image: url(./Assests/floor.png); 
    background-size: auto 100%;
    animation: scroll 4s infinite linear;
}

.floor2 {
    animation-delay: 2s;
    visibility: hidden;
}


@keyframes scroll {
    0%{
        visibility: visible;
        transform: translateX(100%);
    }
    100%{
        visibility: visible;
        transform: translateX(-100%);
    }
}

#gameover{
    display: none;
}

#gameover.gameover{
    display: flex;
    position: absolute;
    justify-content: center;
    z-index: 999;
    top: -20px;
    width: 600px;
    height: auto;
}

.text{
    position: relative;
    font-size: 20px;
    color: aliceblue;
    font-family: 'Courier New', Courier, monospace;
    top: 100px;
}

.fade{
    animation: fadein 1 1 linear;
}

@keyframes fadein {
    0%{
        opacity: 0;
    }
    100%{
        opacity: 1;
    }
}

.page{
    height: 100vh;
}

.hidden{
    display: none;
}

